Changed repo structure and code style

--- a/week1/task3/CMakeLists.txt
+++ b/week1/task3/CMakeLists.txt
@@ -1,8 +1,3 @@
-cmake_minimum_required(VERSION 3.5)
+project(w1_t3)
 
-project(task3 LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-add_executable(task3 main.cpp timer.h)
+add_executable(${PROJECT_NAME} main.cpp timer.h)
