--- a/week1/task3/CMakeLists.txt
+++ b/week1/task3/CMakeLists.txt
@@ -1,3 +1,4 @@
 project(w1_t3)
 
-add_executable(${PROJECT_NAME} main.cpp timer.h)
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE timer)
