--- a/week3/task1/CMakeLists.txt
+++ b/week3/task1/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(w3_t1)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE progress_bar)
+target_link_libraries(${PROJECT_NAME} PRIVATE progress_bar timer)
