--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/static_lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
 set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libraries")
 
+add_subdirectory(thirdparty)
 add_subdirectory(utils)
 file(GLOB WEEK_DIRS "week*")
 foreach (WEEK_DIR ${WEEK_DIRS})
